feat: abstract kits logic into a library so we can use it across multiple gamemodes